--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <link type="text/css" rel="stylesheet"
 	  href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
     <style type="text/css">
-        body
+        bod
         {
             padding-top: 20px;
             padding-bottom: 40px;
         }
-
         .container
         {
             width: 960px;
@@ -26,27 +25,23 @@
         {
             padding: 10px 0px 10px 0px;
         }
-
         .video, .thermometer, .order, .social
         {
             border: 1px dotted;
             text-align: center;
         }
-
         .video
         {
             /* Internal boarders have 1px width, thus need to add 3x 1 px to 120px.*/
             height: 124px;
             line-height: 124px;
         }
-
         .thermometer, .order, .social
         {
             /* line-height to vertically center: http://phragz.net/css/vertical-align/index.html */
             height: 40px;
             line-height: 40px;
         }
-
         div.row
         {
             border: 1px solid;
@@ -99,7 +94,7 @@
        
             </div>
         </div>
-        <div class="row secton2">
+        <div class="row section2">
             <div class="span12">
                 Marketing Section 2
        
